--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sgarza/generator-neonode"
+    "url": "https://github.com/Empathia/neonode/"
   },
   "author": {
     "name": "Sergio de la Garza",
