add "yeoman-generator" to keywords array

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "main": "generators/app/index.js",
   "keywords": [
+    "yeoman-generator",
     "yeoman",
     "generator",
     "fullstack",
