--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-neonode",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Yeoman generator to scaffold a Neonode Fullstack MVC Application",
   "homepage": "",
   "repository": {
@@ -20,6 +20,7 @@
   ],
   "main": "generators/app/index.js",
   "keywords": [
+    "yeoman-generator",
     "yeoman",
     "generator",
     "fullstack",
